--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     background-color:azure;
     border-radius: 5px;
     border: 5px solid gold;
-    text-align: venter;
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,12 +43,14 @@ body{
 .kekka{
     background-color: white;
     border: 2px dashed red;
-    width: 200px;
-    height: 100px;
+    width: 250px;
+    min-height: 150px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 20px auto;
+    padding: 10px;
 }
 
 /* キラキラの星の見た目 */
