--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 20px;
+
+    transform: scale(2.5);
+    transform-origin: center;
 }
 
 #result-display{
