--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body{
 .kekka{
     background-color: white;
     border: 2px dashed red;
-    width: 250px;
+    width: 280px;
     min-height: 150px;
     display: flex;
     flex-direction: column;
@@ -54,6 +54,7 @@ body{
     align-items: center;
     margin: 20px auto;
     padding: 10px;
+    white-space: nowrap;
 }
 
 /* キラキラの星の見た目 */
